Refactored into a nice meteor example.

--- a/mildly-horrifying-examples/demo.html
+++ b/mildly-horrifying-examples/demo.html
@@ -1,6 +1,6 @@
 <head>
-	<title>meteor-packages</title>
+	<title>TemplateHelpers Demo</title>
 </head>
 <body>
 	{{> DemoTemplateHelpers}}
-<body>
+</body>
